Fix heading overflow

--- a/styles/index.css
+++ b/styles/index.css
@@ -257,16 +257,6 @@ img {
     background-color: white;
 }
 
-.head-welcome {
-    font-size: 1.5rem;
-    font-weight: 600;
-    color: #ff5100;
-}
-
-.head-type {
-    font-size: 6rem;
-}
-
 #cursor {
     font-weight: 300;
     animation: blink 1s linear infinite;
@@ -337,6 +327,16 @@ img {
     line-height: 130%;
     font-weight: 600;
     color: #4748EE;
+}
+
+.head-welcome {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #ff5100;
+}
+
+.head-type {
+    font-size: 5.7rem;
 }
 
 
@@ -777,10 +777,6 @@ hr {
         display: none;
     }
 
-    .syllabus .row {
-        margin-top: 10%;
-    }
-
     .head-welcome {
         display: flex;
         flex-direction: column;
@@ -805,6 +801,7 @@ hr {
         margin-top: 0 !important;
     }
 
+
     .demo {
         flex-direction: column;
         align-items: center;
@@ -827,6 +824,10 @@ hr {
     .syllabus {
         padding: 10%;
         padding-bottom: 15% !important;
+    }
+
+    .syllabus .row {
+        margin-top: 10%;
     }
 
     .syllabus-link {
